--- a/website/css/main.css
+++ b/website/css/main.css
@@ -1,6 +1,6 @@
 body{
     background-color: #3B3B3B;
-
+    display: flex;
 }
 
 .container {
@@ -67,11 +67,15 @@ svg {
     flex-grow: 1;
     height: 100vh;
     border-radius: 20px;
-    background: #676767;
+    background: #f3f3f3;
     padding: 30px;
     margin: 3vh;
     overflow: hidden;
     position: relative;
+}
+
+#DayHeader {
+    font-weight: 900;
 }
 
 .rightPanelRectangle::before {
@@ -80,35 +84,114 @@ svg {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 30%;
+    height: 20%;
     background-color: #37476D;
 }
 
-.topColumnContainer {
+.panelContainer {
     display: flex;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-#topColumnDateAndTime {
+#objectiveInstanceWrapper, .leftColumnWrapper, .rightColumnWrapper, #actualObjectiveInstance {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    margin-right: 10px
 }
 
-#topColumnProfile {
+#objectivesPanelTopRow, #personalTasksTopRow {
     display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
-    flex-grow: 8;
-}
-
-.profileCircle {
-    height: 100px;
-    width: 100px;
-    background-color: #bbb;
-    border-radius: 50%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 10px;
     margin-right: 10px;
 }
-.space {
-    width:500px;
+
+#objectiveInstance, .leftColumn, #objectiveInstanceText, #objectiveInstance {
+    display: flex;
+    flex-direction: column;
+}
+
+#objectiveInstanceText {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+}
+
+#DotWHeader {
+    margin: 0;
+    font-weight: 600;
+    font-size: 50px;
+}
+
+#objectivesPanel {
+    border-radius: 20px;
+    margin-top: 40px;
+    margin-left: 50px;
+    padding: 20px;
+    background: #D9D9D9;
+    min-width: 500px;
+}
+
+#personalTasksPanel {
+    border-radius: 20px;
+    margin-top: 40px;
+    padding: 20px;
+    background: #D9D9D9;
+    min-width: 500px;
+}
+
+.rightColumn {
+    display: flex;
+    flex-direction: column;
+    margin-left: 100px;
+}
+
+#profile {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 0;
+}
+
+#profilePicture {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+
+#notificationWrapper, #recentAnnouncementsWrapper {
+    display: flex;
+    border-radius: 20px;
+    padding: 20px;
+    background: #D9D9D9;
+    margin-top: 40px;
+    flex-direction: column;
+    min-width: 500px;
+}
+
+#recentAnnouncementsWrapper {
+    display: flex;
+    border-radius: 20px;
+    padding: 20px;
+    background: #D9D9D9;
+    margin-top: 20px;
+    flex-direction: column;
+    min-width: 500px;
+}
+
+#notificationHeader, #recentAnnouncementsHeader {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
+#notificationContent {
+    display: flex;
+    flex-direction: row;
+    margin-top: 0;
+    margin-bottom: 5px;
 }
