SoftEng 2 First Commit: Changes, Additions, Refactors
- Refactored multiple pages into separate files for readability
- Refactored html and php scripts into views
- Created login script
- Created sql script (seen under "website/db")
- Established database connection (unfinished)
- Multiple CSS modifications, such as height from 100vh to 100% for .rightPanelTriangle

If in need of reference: https://laracasts.com/series/php-for-beginners-2023-edition

Nakatulong, tbh.

Also note that some of these codes are made by Gemini.

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -65,7 +65,7 @@ svg {
 
 .rightPanelRectangle {
     flex-grow: 1;
-    height: 100vh;
+    height: 100%;
     border-radius: 20px;
     background: #676767;
     padding: 30px;
