--- a/website/css/main.css
+++ b/website/css/main.css
@@ -377,5 +377,48 @@ svg {
     margin: 0;
 }
 
+.Bulletin {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 25vh;
+    width: 20vw;
+    background-color: #D9D9D9;
+    border-radius: 17px;
+    margin-left: 50px;
+    border-width: thin;
+    border-style: solid;
+    border-color: #000000;
+    padding: 2px;
+}
 
+.BBDivider {
+    display: flex;
+    align-items: baseline;
+    flex-direction: row;
+    gap: 2vw;
+}
 
+.BBBody{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+}
+
+#BulletinContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+#BulletinRow {
+   display:flex;
+   flex-direction: row;
+}
+
+.Bulletinheader {
+   text-align: center;
+}
