--- a/laravel/resources/css/employeesPanel.css
+++ b/laravel/resources/css/employeesPanel.css
@@ -44,6 +44,8 @@
     margin-top: 1vw;
     width:90%;
     border-bottom: solid 0.5px #4f4f4f;
+    color: inherit;
+    text-decoration: none;
 }
 
 .teamperson img {
@@ -53,8 +55,10 @@
 .teamperson h3{
     font-size: 1vw;
     margin: 0;
+    color: inheit;
 
 }
+
 
 .teamperson p{
     font-size: 0.85vw;;
