--- a/laravel/resources/css/notesPanel.css
+++ b/laravel/resources/css/notesPanel.css
@@ -24,9 +24,11 @@
 .title {
     font-size: 4vw;
     margin: 0;
+    margin-left: 15%;
     position: absolute;
     bottom: 0;
     left: 0;
+
 }
 
 .title2 {
@@ -41,15 +43,23 @@
 .titleContainer {
     height: 5vw;
     margin: 2vw;
+    margin-left: 0px;
+    margin-right: 0px;
     position: relative;
+    border-bottom: 1px solid black;
 }
 
 .noteDetailContainer {
-    background-color: #cccccc;
+    display: block;
     padding: 0.3vw;
     border-bottom: 1px solid black; 
+    color: inherit;
+    text-decoration: none;
     
 
+}
+.noteDetailContainer:hover {
+    background-color: #bbbbbb; /* Add hover effect if desired */
 }
 
 .noteTitle {
