--- a/laravel/resources/css/employeesPanel.css
+++ b/laravel/resources/css/employeesPanel.css
@@ -8,10 +8,34 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
     width: 30vw;
     height: 92vh;
     border-right: solid 1px #4f4f4f;
 
+}
+
+html {
+    scrollbar-width: thin; /* Options: auto, thin, none */
+    scrollbar-color: rgba(0, 0, 0, 0.5) transparent; /* Thumb color and track color */
+}
+
+::-webkit-scrollbar {
+    width: 12px; /* Width of the scrollbar */
+    height: 12px; /* Height of the scrollbar (for horizontal scrolling) */
+}
+
+::-webkit-scrollbar-track {
+    background: transparent; /* Transparent background of the track */
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent color of the thumb */
+    border-radius: 10px; /* Rounded corners of the scrollbar thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.7); /* Darker color of the thumb on hover */
 }
 
 
