--- a/laravel/resources/css/notesPanel.css
+++ b/laravel/resources/css/notesPanel.css
@@ -12,6 +12,7 @@
     border-right: 1px solid black; 
     border-right-color: black;
     border-right-width: 1px;
+    overflow-x: hidden;
 }
 .rowContainer2 {
     width: 70%;
@@ -25,6 +26,7 @@
     font-size: 4vw;
     margin: 0;
     margin-left: 15%;
+    
     position: absolute;
     bottom: 0;
     left: 0;
@@ -41,6 +43,10 @@
 }
 
 .titleContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
     height: 5vw;
     margin: 2vw;
     margin-left: 0px;
@@ -79,4 +85,46 @@
     margin-left: 2vw;
     margin-right: 3vw;
 
+}
+
+#plusButton {
+    display: flex;
+    margin-left: auto;
+    margin-right: 1vw;;
+    padding-top: 1vw;
+    margin-bottom: 3%;
+}
+
+.actionsContainer {
+    display: flex;
+    gap: 1vw;
+    margin-right: 3vw;
+
+}
+
+.transparent-textbox {
+    background-color: rgba(255, 255, 255, 00); /* Semi-transparent background */
+    border: 1px solid rgba(0, 0, 0, 0); /* Semi-transparent border */
+    padding: 1vw;
+    width: 100%;
+    font-size: 2vw;
+    outline: none; /* Remove default outline */
+    color: #000; /* Text color */
+
+    border-radius: 4px; /* Rounded corners */
+    transition: background-color 0.3s ease, border 0.3s ease; /* Smooth transition */
+}
+
+
+.transparent-textfield {
+    background-color: rgba(255, 255, 255, 0); /* Fully transparent background */
+    border: 1px solid rgba(0, 0, 0, 0); /* Semi-transparent border */
+    padding: 10px;
+    width: 40vw;
+    height: 40vw;
+    outline: none; /* Remove default outline */
+    color: #000; /* Text color */
+    font-size: 1vw; /* Change font size here */
+    border-radius: 4px; /* Rounded corners */
+    transition: background-color 0.3s ease, border 0.3s ease; /* Smooth transition */
 }
